--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 
-php/env.php
+manuales/
+
+news.txt
+
+.tmp.driveupload/
+
+aplication/php/test.php
+
+aplication/python/log/
+
+**/__pycache__/
+**/env.php
+**/config.json
+
+aplication/python/elipticnet_env/
