--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 
-manuales/
 news.txt
 .tmp.driveupload/
-aplication/php/test.php
-aplication/python/log/
 **/__pycache__/
 **/env.php
 **/config.json
+*.log
 aplication/python/elipticnet_env/
 
